# agentaihack

./: README.md  pyproject.toml
knowledge/: patients.csv
src/neurosync/: crew.py  main.py
