[project]
name = "neurosync"
version = "0.1.0"
description = "neurosync using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0",
    "langchain-huggingface>=0.2.0",
    "resource>=0.2.1",
    "transformers>=4.46.3",
    "vllm>=0.7.0",
]

[project.scripts]
neurosync = "neurosync.main:run"
run_crew = "neurosync.main:run"
train = "neurosync.main:train"
replay = "neurosync.main:replay"
test = "neurosync.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
